updated some code

--- a/Hangman2.html
+++ b/Hangman2.html
@@ -18,7 +18,7 @@
 
 
     <p>[Play by guessing the letters that spell an animal's name]</p>
-<h2>*you have six chances*</h2>
+<h2>*you only have six chances*</h2>
  <script src='Hangman2.js'></script>
 </body>
 </html>
